--- a/src/index.css
+++ b/src/index.css
@@ -3,27 +3,27 @@ body {
 }
 /* width */
 ::-webkit-scrollbar {
-   width: 8px;
- }
- 
- /* Track */
- ::-webkit-scrollbar-track {
-   background: #f1f1f1; 
- }
-  
- /* Handle */
- ::-webkit-scrollbar-thumb {
-   background: #888; 
- }
- 
- /* Handle on hover */
- ::-webkit-scrollbar-thumb:hover {
-   background: #555; 
- }
+  width: 8px;
+}
 
- @media screen and (max-width: 768px){
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+@media screen and (max-width: 768px) {
   ::-webkit-scrollbar {
-      -webkit-appearance: none;
+    -webkit-appearance: none;
   }
 }
 
@@ -49,34 +49,31 @@ body {
   padding: 20px;
   border-radius: 5px;
 }
-.padding-zero .ant-card-body{
-   padding: 10px;
-   height: calc(100% - 60px)
+.padding-zero .ant-card-body {
+  padding: 10px;
+  height: calc(100% - 60px);
 }
 
-
-
 .savebtn:hover {
-  color: #4CAF50 !important;
-  border-color: #8BC34A !important;
+  color: #4caf50 !important;
+  border-color: #8bc34a !important;
 }
 
 .dangerbtn:hover {
-  color: #F44336 !important;
-  border-color: #F44336 !important;
+  color: #f44336 !important;
+  border-color: #f44336 !important;
 }
 
 .exportbtn:hover {
   color: #673ab7 !important;
   border-color: #673ab7 !important;
-
 }
 
 .bluebtn:hover {
   color: #2196f3 !important;
   border-color: #2196f3 !important;
 }
-.editbtn:hover{
+.editbtn:hover {
   color: #ff9800 !important;
   border-color: #ffc107 !important;
 }
@@ -104,13 +101,13 @@ body {
 }
 
 .fullmodel .ant-modal-body {
-  height: calc(100% - 150px );
+  height: calc(100% - 150px);
   background-color: #f5f5f5;
-  padding:10px;
+  padding: 10px;
   overflow-y: auto;
   overflow-x: hidden;
   border-radius: 10px;
 }
-.site-layout{
-    height: 100vh;
+.site-layout {
+  height: 100vh;
 }
